--- a/app/src/main/res/layout/fragment_amortization_credit.xml
+++ b/app/src/main/res/layout/fragment_amortization_credit.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical">
 <androidx.compose.ui.platform.ComposeView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/compose_view"
+    android:id="@+id/compose_view_fac"
     android:layout_width="match_parent"
-    android.layout_height="match_parent" />
+    android:layout_height="match_parent" />
+</LinearLayout>
