Feature/migrate amortization credit to compose (#43)
* Migrate AmortizationCreditFragment to Jetpack Compose

This commit migrates the `AmortizationCreditFragment` from the `app` module to a new Composable screen in the `credit` module.

The new screen is implemented using Jetpack Compose and Material 3 components. It uses a ViewModel to handle the business logic and fetch the data.

The old files have been deleted.

* Migrate AmortizationCreditFragment to Jetpack Compose

This commit migrates the `AmortizationCreditFragment` from the `app` module to a new Composable screen in the `credit` module.

The new screen is implemented using Jetpack Compose and Material 3 components. It uses a ViewModel to handle the business logic and fetch the data.

The old files have been deleted.

* feature Migrate amortization credit to compose

fix some issues in code and prepare interface to run

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

* feature Migrate amortization credit to compose

Remove some code about navigation
remove holder is not used anymore

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

* feature Migrate amortization credit to compose

Fix issues witn amortization table by credit fix, and add year of each 12 month in header group 12 months view

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

---------

Signed-off-by: alejandro parra <alejandroparral@gmail.com>
Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/app/src/main/res/layout/fragment_amortization_credit.xml
+++ b/app/src/main/res/layout/fragment_amortization_credit.xml
@@ -1,258 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".finanzas.controller.AmortizationCreditFragment">
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/space_min">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/space_min"
-                android:orientation="vertical">
-
-                <ProgressBar
-                    android:id="@+id/pb_load_acf"
-                    style="?android:attr/progressBarStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:elevation="@dimen/card_elevator_5"
-                    android:progressBackgroundTint="?attr/colorPrimaryVariant"/>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_weight="1"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:hint="@string/date_credit"
-                    android:layout_height="wrap_content">
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/date_acf"
-                        style="@style/MaterialTextInputLayoutView"
-                        android:text="@string/date_hint"
-                        android:enabled="false"
-                        android:textAlignment="center"/>
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_weight="1"
-                    android:hint="@string/interest_value_short"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:layout_height="wrap_content">
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/tv_interest_acf"
-                        android:enabled="false"
-                        style="@style/MaterialTextInputLayoutView"
-                        android:text="@string/interest_value_hint"
-                        android:textAlignment="center"/>
-                </com.google.android.material.textfield.TextInputLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_weight="1"
-                        android:hint="@string/periods"
-                        style="@style/MaterialTextInputLayoutView"
-                        android:layout_height="wrap_content">
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/period_acf"
-                            style="@style/MaterialTextInputLayoutView"
-                            android:text="@string/months_number_hint"
-                            android:enabled="false"
-                            android:textAlignment="center"/>
-                    </com.google.android.material.textfield.TextInputLayout>
-
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_weight="1"
-                    android:padding="@dimen/space_min"
-                    android:hint="@string/interest_to_pay_value"
-                    app:prefixText="$"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:layout_height="wrap_content">
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/interest_acf"
-                        style="@style/MaterialTextInputLayoutView"
-                        android:enabled="false"
-                        android:text="@string/money_hint"
-                        android:textAlignment="center"/>
-                </com.google.android.material.textfield.TextInputLayout>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_weight="1"
-                        android:hint="@string/additional_monthly"
-                        app:prefixText="$"
-                        style="@style/MaterialTextInputLayoutView"
-                        android:layout_height="wrap_content">
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            style="@style/MaterialTextInputLayoutView"
-                            android:enabled="false"
-                            android:id="@+id/additional_monthly__acf"
-                            android:text="@string/money_hint"
-                            android:textAlignment="center"/>
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_weight="1"
-                    android:hint="@string/additional_to_pay"
-                    style="@style/MaterialTextInputLayoutView"
-                    app:prefixText="$"
-                        android:layout_height="wrap_content">
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/additional_acf"
-                        android:enabled="false"
-                        style="@style/MaterialTextInputLayoutView"
-                        android:text="@string/money_hint"
-                        android:textAlignment="center"/>
-                </com.google.android.material.textfield.TextInputLayout>
-                </LinearLayout>
-
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_weight="1"
-                    android:hint="@string/quote_value"
-                    app:prefixText="$"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:layout_height="wrap_content">
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/quote_acf"
-                        style="@style/MaterialTextInputLayoutView"
-                        android:enabled="false"
-                        android:text="@string/money_hint"
-                        android:textAlignment="center"/>
-                </com.google.android.material.textfield.TextInputLayout>
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btn_extra_values_list_acf"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="@string/extra_value_list"
-                    android:layout_margin="@dimen/space_min"
-                    app:icon="@android:drawable/ic_menu_search" />
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btn_additional_acf"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="@string/additional_to_pay"
-                    android:layout_margin="@dimen/space_min"
-                    app:icon="@android:drawable/ic_menu_search" />
-
-                </LinearLayout>
-                <TableLayout
-                    android:layout_width="match_parent"
-                    android:layout_margin="@dimen/space_min"
-                    android:padding="@dimen/space_min"
-                    android:id="@+id/amortization_acf"
-                    android:layout_height="wrap_content">
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center">
-                        <com.google.android.material.textview.MaterialTextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="@dimen/space_min"
-                            android:background="?attr/colorPrimary"
-                            android:textColor="@color/white"
-                            android:layout_margin="@dimen/column_space_min"
-                            android:layout_weight="1.3"
-                            android:textAlignment="center"
-                            android:text="#"/>
-
-                        <com.google.android.material.textview.MaterialTextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="@dimen/column_space_min"
-                            android:layout_weight="2.3"
-                            android:background="?attr/colorPrimary"
-                            android:padding="@dimen/space_min"
-                            android:textAlignment="center"
-                            android:textColor="@color/white"
-                            android:text="@string/value"/>
-
-                        <com.google.android.material.textview.MaterialTextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="@dimen/column_space_min"
-                            android:background="?attr/colorPrimary"
-                            android:layout_weight="3"
-                            android:padding="@dimen/space_min"
-                            android:textAlignment="center"
-                            android:textColor="@color/white"
-                            android:text="@string/capital_value"/>
-
-                        <com.google.android.material.textview.MaterialTextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="?attr/colorPrimary"
-                            android:layout_margin="@dimen/column_space_min"
-                            android:textAlignment="center"
-                            android:layout_weight="3"
-                            android:padding="@dimen/space_min"
-                            android:textColor="@color/white"
-                            android:text="@string/interest_value"/>
-                    </TableRow>
-
-
-                </TableLayout>
-
-            </LinearLayout>
-
-        </com.google.android.material.card.MaterialCardView>
-
-    </ScrollView>
-
-
-
-
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical">
+<androidx.compose.ui.platform.ComposeView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/compose_view_fac"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
 </LinearLayout>
