--- a/app/src/main/res/layout/drawable.xml
+++ b/app/src/main/res/layout/drawable.xml
@@ -17,6 +17,7 @@
             android:id="@+id/tool_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
             app:layout_collapseMode="parallax"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             />
